# pyday2020-generate

./: .gitignore  README.md  pyproject.toml
data/: region_data.csv
src/: generators.py  hello.py  make_dataset.py  region_data.csv
tests/: conftest.py  test_generators.py  test_hello.py  test_make_dataset.py
