[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Alberto <camara@protonmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
pylint = "^2.6.0"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
mypy = "^0.790"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
