[tool.poetry]
name = "pyday2020-generate"
version = "0.1.0"
description = ""
authors = ["Alberto Camara <camara@protonmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.1.4"
click = "^7.1.2"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
pytest-cov = "^2.10.1"
mypy = "^0.790"
pylint = "^2.6.0"
black = "^20.8b1"
ipython = "^7.19.0"
pdbpp = "^0.10.2"
hypothesis = "^5.41.4"
pytest-xdist = "^2.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
